# mws

./: .arcconfig  .arclint  .clang-format  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Makefile  README  README.md  TODO  groups  project.config
.github/workflows/: CI.yml
analytics/: CMakeLists.txt  README.md  example.cpp
config/: CMakeLists.txt  MwsDaemonConf.hpp  MwsDbcConf.hpp  MwsQueryConf.hpp  MwsRestrictions.hpp  Version.hpp.in  arxiv-harvester.json  config.h.in  doxyfile.in  mathhub-harvester.json  mws_services.conf  planetary-harvester.json  zbl-harvester.json
data/arxivdemo/: harvest1304925547.xml  harvest1304925553.harvest  harvest1304925558.xml  harvest1304925620.harvest  harvest1304925626.xml  harvest1304925631.harvest  harvest1304925635.xml  harvest1304925641.xml  (+175 more)
scripts/: mws-config.in  mwsd-service.in  mwsd-service.sh.in  mwsd_arxivdemo.conf  run-elastic-search-bulk.sh  send-mws-query.sh  send-qvar-query.sh
scripts/sysv/: CMakeLists.txt  deploy.sh  example.conf  mws-config.in  mwsd-service.sh.in  mwsd.init.in  remove.sh  restd.init.in
src/crawler/: CMakeLists.txt  crawlerd.cpp  docs2harvest.cpp  harvests2json.cpp  xhtml2harvests.cpp
src/crawler/crawler/: CMakeLists.txt  MwsCrawler.cpp  MwsCrawler.hpp
src/crawler/daemon/: CMakeLists.txt  CrawlerDaemon.cpp  CrawlerDaemon.hpp  GetResponse.html
src/crawler/parser/: CMakeLists.txt  MathParser.cpp  MathParser.hpp  XmlParser.cpp  XmlParser.hpp
src/crawler/types/: CMakeLists.txt  Page.cpp  Page.hpp  Robotstxt.cpp  Robotstxt.hpp  SharedQueue.hpp  UrlDB.cpp  UrlDB.hpp
src/crawler/utils/: CMakeLists.txt  MwsGetMath.cpp  MwsGetMath.hpp  MwsMathMLTags.txt  Page.cpp  fmemopen.c
src/mws/: CMakeLists.txt  mws-index.cpp  mws.ctags  mws_indexer.cpp  mwsd-load.cpp  mwsd.cpp  schemad.cpp
src/mws/analytics/: CMakeLists.txt  analytics.cpp  analytics.hpp
src/mws/daemon/: CMakeLists.txt  Daemon.cpp  Daemon.hpp  GenericHttpResponses.hpp  GenericResponses.hpp  HarvestDaemon.cpp  HarvestDaemon.hpp  HarvestQueryHandler.cpp  HarvestQueryHandler.hpp  IndexDaemon.cpp  IndexDaemon.hpp  IndexQueryHandler.cpp  IndexQueryHandler.hpp  MwsDaemon.cpp  MwsDaemon.hpp  MwsDaemonLoad.cpp  MwsDaemonLoad.hpp  QueryHandler.hpp  SchemaQueryHandler.cpp  SchemaQueryHandler.hpp  microhttpd_linux.h
src/mws/dbc/: CMakeLists.txt  CrawlDb.hpp  DbQueryManager.cpp  DbQueryManager.hpp  DbQueryManger.cpp  DbQueryManger.hpp  FormulaDb.hpp  LevCrawlDb.cpp  LevCrawlDb.hpp  LevFormulaDb.cpp  LevFormulaDb.hpp  MemCrawlDb.cpp  MemCrawlDb.hpp  MemFormulaDb.cpp  MemFormulaDb.hpp  MwsDbConn.cpp  MwsDbConn.hpp  MwsDbData.hpp  MwsDbcMacros.hpp  PageDbConn.cpp  PageDbConn.hpp  PageDbHandle.cpp  PageDbHandle.hpp  SerializePage.hpp
src/mws/index/: CMakeLists.txt  CallbackIndexIterator.hpp  ExpressionEncoder.cpp  ExpressionEncoder.hpp  IndexAccessor.hpp  IndexBuilder.cpp  IndexBuilder.hpp  IndexIterator.hpp  IndexLoader.cpp  IndexLoader.hpp  IndexManager.cpp  IndexManager.hpp  IndexWriter.cpp  IndexWriter.hpp  MeaningDictionary.hpp  MwsIndexNode.cpp  MwsIndexNode.hpp  TmpIndex.cpp  TmpIndex.hpp  TmpIndexAccessor.hpp  encoded_token.h  encoded_token_dict.h  encoded_url_dict.h  index.c  index.h  memsector.c  memsector.h  memsector_allocator.h
src/mws/query/: CMakeLists.txt  SchemaEngine.cpp  SchemaEngine.hpp  SearchContext.cpp  SearchContext.hpp  SearchContextTypes.hpp  engine.c  engine.h  query_engine.c  query_engine.h
src/mws/types/: Answer.hpp  CMakeLists.txt  CmmlToken.cpp  CmmlToken.hpp  ExprSchema.hpp  FormulaPath.hpp  GenericAnswer.hpp  GenericTypes.hpp  HandlerStruct.hpp  MeaningDictionary.cpp  MeaningDictionary.hpp  MwsAnsw.hpp  MwsAnswset.hpp  MwsQuery.hpp  MwsSignature.cpp  MwsSignature.hpp  MwsSubst.hpp  NodeInfo.hpp  PageData.cpp  PageData.hpp  Query.hpp  SchemaAnswset.hpp  URLDictionary.cpp  URLDictionary.hpp  VectorMap.hpp
src/mws/xmlparser/: CMakeLists.txt  JsonResponseFormatter.cpp  JsonResponseFormatter.hpp  MwsIdsResponseFormatter.cpp  MwsIdsResponseFormatter.hpp  MwsJsonResponseFormatter.cpp  MwsJsonResponseFormatter.hpp  MwsXmlResponseFormatter.cpp  MwsXmlResponseFormatter.hpp  ParserTypes.hpp  SchemaJsonResponseFormatter.cpp  SchemaJsonResponseFormatter.hpp  SchemaResponseFormatter.cpp  SchemaResponseFormatter.hpp  SchemaXmlResponseFormatter.cpp  SchemaXmlResponseFormatter.hpp  XmlResponseFormatter.cpp  XmlResponseFormatter.hpp  clearxmlparser.cpp  clearxmlparser.hpp  initxmlparser.cpp  initxmlparser.hpp  loadMwsHarvestFromDirectory.cpp  loadMwsHarvestFromFd.cpp  loadMwsHarvestFromFd.hpp  loadMwsHarvestFromMemory.cpp  loadMwsHarvestFromMemory.hpp  parseMwsHarvestFromFd.cpp  processMwsHarvest.cpp  processMwsHarvest.hpp  readMwsQuery.cpp  readMwsQuery.hpp  readMwsQueryFromFd.cpp  readMwsQueryFromFd.hpp  readMwsQueryFromMemory.cpp  readMwsQueryFromMemory.hpp  verifyMwsMessageTypeFromFd.cpp  verifyMwsMessageTypeFromFd.hpp  verifyMwsMessageTypeFromMemory.cpp  verifyMwsMessageTypeFromMemory.hpp  (+10 more)
src/rest/: CMakeLists.txt  restd.cpp
src/rest/daemon/: CMakeLists.txt  GenericResponses.hpp  RestDaemon.cpp  RestDaemon.hpp  microhttpd_linux.h
src/rest/types/: CMakeLists.txt  MwsConnection.hpp
test/src/common/types/: CMakeLists.txt  Parcelable.cpp
test/src/mws/: CMakeLists.txt  mws-integration-test.sh.in
test/src/mws/dbc/: CMakeLists.txt  MemCrawlDb.cpp  MemFormulaDb.cpp
test/src/mws/index/: CMakeLists.txt  TmpIndexNode_exportToMemsector.cpp  ci_renaming.cpp  loadMwsHarvestFromFdTest.cpp
test/src/mws/parser/: CMakeLists.txt  loadMwsHarvestFromFdTest.cpp  readMwsQueryFromFdTest.cpp  readMwsQueryTest.cpp  writeXmlAnswsetTest.cpp  writeXmlAnswsetToFdTest.cpp
test/src/mws/query/: CMakeLists.txt  engine_novars0.cpp  engine_qvar0.cpp  engine_qvar_hvar0.cpp  engine_rep_qvar0.cpp  engine_rep_qvar1.cpp  engine_rep_qvars0.cpp  engine_rep_qvars1.cpp  engine_rep_qvars2.cpp  engine_rootqvar0.cpp  engine_tester.hpp  query_engine_tester.hpp  range_query.cpp  schema_decoder.cpp  schema_engine_tester.hpp  schema_hashing.cpp  schema_reducer.cpp  schema_reducer1.cpp  test_query_engine.cpp  test_query_engine_qvar_hvar.cpp
(+116 files in other folders)
